# PySyntenyViz

./: .gitignore  Dockerfile  README.md  change_gbk_origin.py  gbk_rc.py  pyproject.toml  reorder_gbk.py  setup.py  synteny_viz.py
.github/workflows/: publish-to-pypi.yml
PySyntenyViz/: change_gbk_origin.py  cli.py  gbk_rc.py  reorder_gbk.py  synteny_viz.py
